--- a/RazorPages/RazorPages/RazorPages.csproj
+++ b/RazorPages/RazorPages/RazorPages.csproj
@@ -7,8 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Home.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Home.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Home.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Home.cshtml" />
   </ItemGroup>
 
 </Project>
